testsuite/tests/typecheck/should_fail/CustomTypeErrors03.stderr

CustomTypeErrors03.hs:6:6: error:
    This is a type error
    In the type signature for ‘f’:
      f :: TypeError (Text "This is a type error")
